added weights averaging

--- a/notebooks/OOF.ipynb
+++ b/notebooks/OOF.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "3faa2f1a",
+   "execution_count": 1,
+   "id": "7bafdab5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "91e7730d",
+   "execution_count": 2,
+   "id": "8dc506e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "c6e64f38",
+   "execution_count": 3,
+   "id": "b6918ab8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,14 +88,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "0d01685e",
+   "execution_count": 13,
+   "id": "fb6fb99e",
    "metadata": {},
    "outputs": [],
    "source": [
     "INPUT_PATH = Path(\"/home/trytolose/rinat/kaggle/grav_waves_detection/input\")\n",
     "\n",
     "df = pd.read_csv(INPUT_PATH / \"training_labels.csv\")\n",
+    "# df = pd.read_csv(INPUT_PATH / \"train_oof_overfit.csv\")\n",
     "\n",
     "files = list((INPUT_PATH / \"train\").rglob(\"*.npy\"))\n",
     "FILE_PATH_DICT = {x.stem: str(x) for x in files}\n",
@@ -109,8 +110,179 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "a0e184e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>target</th>\n",
+       "      <th>path</th>\n",
+       "      <th>fold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0000661522</td>\n",
+       "      <td>0</td>\n",
+       "      <td>/home/trytolose/rinat/kaggle/grav_waves_detect...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00007a006a</td>\n",
+       "      <td>0</td>\n",
+       "      <td>/home/trytolose/rinat/kaggle/grav_waves_detect...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0000c3b9c9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>/home/trytolose/rinat/kaggle/grav_waves_detect...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>000118b40d</td>\n",
+       "      <td>0</td>\n",
+       "      <td>/home/trytolose/rinat/kaggle/grav_waves_detect...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0001388506</td>\n",
+       "      <td>1</td>\n",
+       "      <td>/home/trytolose/rinat/kaggle/grav_waves_detect...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>559994</th>\n",
+       "      <td>ffff8ae576</td>\n",
+       "      <td>1</td>\n",
+       "      <td>/home/trytolose/rinat/kaggle/grav_waves_detect...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>559996</th>\n",
+       "      <td>ffffab0c27</td>\n",
+       "      <td>0</td>\n",
+       "      <td>/home/trytolose/rinat/kaggle/grav_waves_detect...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>559997</th>\n",
+       "      <td>ffffcf161a</td>\n",
+       "      <td>1</td>\n",
+       "      <td>/home/trytolose/rinat/kaggle/grav_waves_detect...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>559998</th>\n",
+       "      <td>ffffd2c403</td>\n",
+       "      <td>0</td>\n",
+       "      <td>/home/trytolose/rinat/kaggle/grav_waves_detect...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>559999</th>\n",
+       "      <td>fffff2180b</td>\n",
+       "      <td>0</td>\n",
+       "      <td>/home/trytolose/rinat/kaggle/grav_waves_detect...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>448000 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                id  target                                               path  \\\n",
+       "2       0000661522       0  /home/trytolose/rinat/kaggle/grav_waves_detect...   \n",
+       "3       00007a006a       0  /home/trytolose/rinat/kaggle/grav_waves_detect...   \n",
+       "6       0000c3b9c9       0  /home/trytolose/rinat/kaggle/grav_waves_detect...   \n",
+       "10      000118b40d       0  /home/trytolose/rinat/kaggle/grav_waves_detect...   \n",
+       "11      0001388506       1  /home/trytolose/rinat/kaggle/grav_waves_detect...   \n",
+       "...            ...     ...                                                ...   \n",
+       "559994  ffff8ae576       1  /home/trytolose/rinat/kaggle/grav_waves_detect...   \n",
+       "559996  ffffab0c27       0  /home/trytolose/rinat/kaggle/grav_waves_detect...   \n",
+       "559997  ffffcf161a       1  /home/trytolose/rinat/kaggle/grav_waves_detect...   \n",
+       "559998  ffffd2c403       0  /home/trytolose/rinat/kaggle/grav_waves_detect...   \n",
+       "559999  fffff2180b       0  /home/trytolose/rinat/kaggle/grav_waves_detect...   \n",
+       "\n",
+       "        fold  \n",
+       "2          4  \n",
+       "3          3  \n",
+       "6          4  \n",
+       "10         1  \n",
+       "11         2  \n",
+       "...      ...  \n",
+       "559994     3  \n",
+       "559996     2  \n",
+       "559997     2  \n",
+       "559998     4  \n",
+       "559999     2  \n",
+       "\n",
+       "[448000 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['fold']!=0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a56d1e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9aeb2fe2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
-   "id": "a2aa4114",
+   "id": "9a85bebc",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0f7745ba",
+   "id": "79731170",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "5bfbce30",
+   "id": "7e802f03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "f99f2b28",
+   "id": "87e10f6e",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "dccc0493",
+   "id": "13824353",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "8449a2ad",
+   "id": "4e5fd781",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "247184af",
+   "id": "6142c546",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "aea75a80",
+   "id": "49b631dd",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "32fea0c2",
+   "id": "f228906d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8b2df8c3",
+   "id": "5824512c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2ca685cc",
+   "id": "0cc36882",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d4cbf352",
+   "id": "935ac1e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "e7dca948",
+   "id": "655e8d41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce778e6c",
+   "id": "5e85d8ad",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -363,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3735d493",
+   "id": "aafe8633",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "efe842b1",
+   "id": "7c077877",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "e60cb0b4",
+   "id": "de05c174",
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b1287b9",
+   "id": "a15243b7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -434,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "f8adbbc6",
+   "id": "35a10997",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "46ac0ae7",
+   "id": "6d172e0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6abc5bf1",
+   "id": "42801411",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "9803dffb",
+   "id": "95d14ceb",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "46bf3fa8",
+   "id": "b1d8c9df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "83bff56a",
+   "id": "6eafad56",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6edec66e",
+   "id": "d0eb1aa0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "04da7602",
+   "id": "1e3e8b8c",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ec5a9ea",
+   "id": "0698358c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -585,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bf952b1",
+   "id": "0594b7e0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -593,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "affc8a2b",
+   "id": "2901b0a7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -601,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "093863f5",
+   "id": "e829d17d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -609,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "33c3024b",
+   "id": "c8a6c32d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "afd5bb16",
+   "id": "eee90f4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f947abd6",
+   "id": "edac7186",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f400c3be",
+   "id": "1a253b0d",
    "metadata": {},
    "outputs": [],
    "source": []
