--- a/notebooks/inference.ipynb
+++ b/notebooks/inference.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "3cb27edb",
+   "execution_count": 4,
+   "id": "f76938ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "95ae9e86",
+   "execution_count": 5,
+   "id": "36d84c05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f952ac0a",
+   "id": "4ea356d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e1acc68a",
+   "id": "957c102a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c16e8ac8",
+   "id": "4ff40753",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b9c2f9ce",
+   "id": "2739aacf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2558481b",
+   "id": "9902a3a6",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "396a3a47",
+   "id": "22099089",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7d3ec3be",
+   "id": "94430176",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bbedfc1f",
+   "id": "3b215dd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "11ad876a",
+   "id": "980d301b",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ef3cf342",
+   "id": "dc4783d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5557ff03",
+   "id": "20d13cea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "734114a0",
+   "id": "b79b20e3",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "09db0af4",
+   "id": "fae5cac0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "ac502c25",
+   "id": "24ff6a7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "b5c19039",
+   "id": "e2fcbcef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "97662fc0",
+   "id": "0ca5b82e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "664a026a",
+   "id": "ec57e431",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c461b1e",
+   "id": "d624dcfd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ef84b1b",
+   "id": "ec2de209",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0905f4ef",
+   "id": "a3e23e04",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64e79c3e",
+   "id": "30a03d55",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37a8341e",
+   "id": "eda30958",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100b8706",
+   "id": "3b765383",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8785d10",
+   "id": "99aebded",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21d7a0e8",
+   "id": "c226633e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a5dfff3",
+   "id": "0bd783c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77b9df82",
+   "id": "8ec4ff94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "babd5a46",
+   "id": "44a3b5cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0353254a",
+   "id": "7efa2001",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "59c1ff49",
+   "id": "6b8cd68e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "1d39329e",
+   "id": "84ff2185",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "19f1b3da",
+   "id": "e60e767b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "7f583ae0",
+   "id": "15a7c71f",
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "0fb418eb",
+   "id": "aeb43cfd",
    "metadata": {
     "scrolled": true
    },
@@ -670,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "df670421",
+   "id": "4222e186",
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "89627bf2",
+   "id": "61fb3514",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,117 +703,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "453429f9",
+   "execution_count": 14,
+   "id": "2004f106",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[[ 0.2,  0.4, -0.2],\n",
-       "        [ 0.2,  0. , -0.8],\n",
-       "        [-0.4,  0. , -0.6],\n",
-       "        [-0.8, -0.8,  0.8],\n",
-       "        [ 0.4, -0.4, -0.2],\n",
-       "        [-0.6, -0.6, -0.8],\n",
-       "        [-0.2, -0.4, -0.4],\n",
-       "        [ 0.8, -0.6,  0. ],\n",
-       "        [-0.4,  0. ,  0.4]],\n",
-       "\n",
-       "       [[ 0.4, -0.4, -0.6],\n",
-       "        [-0.6, -0.2, -1. ],\n",
-       "        [ 0.8, -1. , -1. ],\n",
-       "        [-0.8, -0.6, -0.8],\n",
-       "        [-1. , -0.2,  0.4],\n",
-       "        [ 0. , -1. ,  0.6],\n",
-       "        [ 0.2,  0.2, -0.2],\n",
-       "        [ 0.4,  0.4,  0.8],\n",
-       "        [-0.8,  0.6, -1. ]],\n",
-       "\n",
-       "       [[-0.2,  0. ,  0.2],\n",
-       "        [-0.8, -1. , -0.4],\n",
-       "        [-0.8,  0.2,  0.8],\n",
-       "        [ 0.4, -0.4, -0.8],\n",
-       "        [ 0.2,  0.8,  0.2],\n",
-       "        [-0.8,  0.8, -0.6],\n",
-       "        [-0.4, -0.2, -0.6],\n",
-       "        [ 0.8,  0.8, -0.8],\n",
-       "        [-0.4,  0.6,  0.8]],\n",
-       "\n",
-       "       [[ 0.6, -0.8,  0. ],\n",
-       "        [-0.8,  0.4, -0.8],\n",
-       "        [ 0.8, -0.8,  0.8],\n",
-       "        [ 0.6,  0.4, -0.6],\n",
-       "        [ 0.6, -0.4, -0.4],\n",
-       "        [-0.8,  0.6, -0.8],\n",
-       "        [-0.6, -0.4,  0.4],\n",
-       "        [-0.2,  0. , -0.8],\n",
-       "        [-0.2, -0.8,  0.2]],\n",
-       "\n",
-       "       [[ 0.4,  0.2,  0.4],\n",
-       "        [-1. , -0.2, -1. ],\n",
-       "        [ 0.6, -0.4,  0. ],\n",
-       "        [ 0.6, -0.4,  0.4],\n",
-       "        [ 0.4,  0.2, -0.2],\n",
-       "        [ 0.4, -0.8, -1. ],\n",
-       "        [-1. ,  0.4,  0.8],\n",
-       "        [-1. , -0.2,  0.2],\n",
-       "        [-1. , -0.4, -0.4]],\n",
-       "\n",
-       "       [[-0.8, -0.6, -0.2],\n",
-       "        [ 0.2, -0.4, -0.6],\n",
-       "        [-1. , -0.6,  0.6],\n",
-       "        [-0.2,  0.6, -0.4],\n",
-       "        [ 0.4, -0.4,  0.6],\n",
-       "        [-0.2, -0.6, -0.8],\n",
-       "        [ 0.6,  0.6, -0.2],\n",
-       "        [-1. ,  0.8, -0.8],\n",
-       "        [ 0.6, -0.8,  0.6]],\n",
-       "\n",
-       "       [[-0.4,  0.2,  0.8],\n",
-       "        [-0.2, -0.2, -0.8],\n",
-       "        [-1. , -0.2, -0.2],\n",
-       "        [ 0. , -0.8, -0.2],\n",
-       "        [-1. ,  0.2, -0.2],\n",
-       "        [-0.4, -0.8, -0.6],\n",
-       "        [ 0. , -0.6, -0.6],\n",
-       "        [ 0.2, -0.4, -0.4],\n",
-       "        [-0.2, -1. ,  0. ]],\n",
-       "\n",
-       "       [[-0.8, -0.4, -1. ],\n",
-       "        [ 0.6,  0.2, -0.4],\n",
-       "        [-0.4,  0. ,  0.4],\n",
-       "        [ 0.6,  0.8, -0.8],\n",
-       "        [ 0.6,  0. , -0.8],\n",
-       "        [ 0. , -0.4,  0.4],\n",
-       "        [-1. ,  0.6,  0.6],\n",
-       "        [ 0. ,  0. , -0.6],\n",
-       "        [-0.6, -0.2, -0.6]],\n",
-       "\n",
-       "       [[-0.6,  0. , -0.6],\n",
-       "        [ 0.6, -1. , -0.4],\n",
-       "        [ 0. ,  0.6, -0.6],\n",
-       "        [-1. ,  0.6, -0.8],\n",
-       "        [ 0.2, -0.2,  0. ],\n",
-       "        [ 0.2,  0.2,  0.8],\n",
-       "        [ 0.6,  0.6,  0.2],\n",
-       "        [ 0.8, -0.6,  0.8],\n",
-       "        [-0.2,  0.2,  0.4]]])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 166832\n",
+      "-rw-rw-r-- 1 trytolose trytolose  2560697 авг 16 20:00 baseline_f0.pt\n",
+      "-rw-rw-r-- 1 trytolose trytolose    20202 авг 27 00:44 baseline.ipynb\n",
+      "-rw-rw-r-- 1 trytolose trytolose     6570 авг 28 16:19 baseline.py\n",
+      "-rw-rw-r-- 1 trytolose trytolose    70736 сен 10 01:07 inference.ipynb\n",
+      "-rw-rw-r-- 1 trytolose trytolose  4480128 сен  5 22:17 oof_eff0_v2.npy\n",
+      "-rw-rw-r-- 1 trytolose trytolose    17640 сен  5 22:16 OOF.ipynb\n",
+      "-rw-rw-r-- 1 trytolose trytolose 14174282 авг 28 00:37 OOF_pred_turkey_bandpass.csv\n",
+      "-rw-rw-r-- 1 trytolose trytolose      607 авг 14 14:14 scaler.pkl\n",
+      "-rw-rw-r-- 1 trytolose trytolose  6852473 сен  5 22:29 submission_blend.csv\n",
+      "-rw-rw-r-- 1 trytolose trytolose  4754872 авг 28 12:14 submission.csv\n",
+      "-rw-rw-r-- 1 trytolose trytolose  4888393 сен 10 01:04 submission_lb_0.8732.csv\n",
+      "-rw-rw-r-- 1 trytolose trytolose  4894101 авг 30 20:33 submission_rexnet150.csv\n",
+      "-rw-rw-r-- 1 trytolose trytolose  4878213 авг 28 18:49 submission_wave.csv\n",
+      "-rw-rw-r-- 1 trytolose trytolose  4886028 сен  6 10:19 submission_wavenet_01234.csv\n",
+      "-rw-rw-r-- 1 trytolose trytolose  4885162 сен  5 22:27 submission_wavenet_023.csv\n",
+      "-rw-rw-r-- 1 trytolose trytolose  4884464 авг 30 18:41 submission_wavenet.csv\n",
+      "-rw-rw-r-- 1 trytolose trytolose    57588 авг 30 22:03 test.png\n",
+      "-rw-rw-r-- 1 trytolose trytolose 66234989 сен  3 20:31 train_oof_overfit.csv\n",
+      "-rw-rw-r-- 1 trytolose trytolose 40267970 сен  5 22:15 train_oof_wavenet_f023.csv\n",
+      "-rw-rw-r-- 1 trytolose trytolose   863502 сен  8 23:50 Untitled-Copy1.ipynb\n",
+      "-rw-rw-r-- 1 trytolose trytolose  1114832 сен  4 12:19 Untitled.ipynb\n",
+      "-rw-rw-r-- 1 trytolose trytolose     1287 сен  5 22:25 wavenet_vs_cnn.csv\n"
+     ]
     }
    ],
    "source": [
-    "X_scaled"
+    "!ls -l "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f312f535",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"submission_lb_0.8732.csv\")\n",
+    "df_best = pd.read_csv(\"submission_blend.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "2b43fed0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['target'] = 0.3*df['target'] + 0.7*df_best['target'] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0413225a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"submit_best.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e0cada4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best_avg_score0.87182.pth    cp_epoch05_score0.87034.pth\n",
+      "cp_epoch02_score0.87019.pth  cp_epoch06_score0.86905.pth\n",
+      "cp_epoch04_score0.87044.pth\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls ../weights/CustomModel_v1/00_b0_128_best/fold_1/cp_epoch04_score0.87044.pth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "51d0eaca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████| 6.54M/6.54M [00:05<00:00, 1.36MB/s]\n",
+      "Successfully submitted to G2Net Gravitational Wave Detection"
+     ]
+    }
+   ],
+   "source": [
+    "!kaggle competitions submit -c g2net-gravitational-wave-detection -f submit_best.csv -m \"blend best\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bff9def6",
+   "id": "3fe2b742",
    "metadata": {},
    "outputs": [],
    "source": []
