--- a/notebooks/inference.ipynb
+++ b/notebooks/inference.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "f76938ea",
+   "execution_count": 9,
+   "id": "bcf34c53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "36d84c05",
+   "execution_count": 10,
+   "id": "012a83aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4ea356d3",
+   "id": "16497ca0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "957c102a",
+   "id": "84b8c6be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4ff40753",
+   "id": "131d814e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2739aacf",
+   "id": "b60943b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9902a3a6",
+   "id": "ca021145",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "22099089",
+   "id": "4f5070ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "94430176",
+   "id": "8018bc41",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3b215dd8",
+   "id": "18724afb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "980d301b",
+   "id": "33d1540c",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "dc4783d3",
+   "id": "ff13f3c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "20d13cea",
+   "id": "14f9601f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b79b20e3",
+   "id": "906a2dd5",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fae5cac0",
+   "id": "e80d43d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "24ff6a7c",
+   "id": "61f2bc65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "e2fcbcef",
+   "id": "5d3e33e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "0ca5b82e",
+   "id": "e722618b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ec57e431",
+   "id": "7ff6afa4",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d624dcfd",
+   "id": "41a4fca3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec2de209",
+   "id": "b1d6843c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3e23e04",
+   "id": "b2563857",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30a03d55",
+   "id": "18a23a5d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eda30958",
+   "id": "cbe065b3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b765383",
+   "id": "4ad89ac8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99aebded",
+   "id": "6fd690f1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c226633e",
+   "id": "e413dc16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bd783c3",
+   "id": "0f45b099",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ec4ff94",
+   "id": "024b7a03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44a3b5cc",
+   "id": "39173394",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7efa2001",
+   "id": "2c1ca3a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6b8cd68e",
+   "id": "d6080a38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "84ff2185",
+   "id": "b0e01189",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "e60e767b",
+   "id": "275f1a3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "15a7c71f",
+   "id": "e0f78667",
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "aeb43cfd",
+   "id": "5a3125b4",
    "metadata": {
     "scrolled": true
    },
@@ -670,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "4222e186",
+   "id": "e0ca9fff",
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "61fb3514",
+   "id": "256c9075",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2004f106",
+   "id": "9c916f43",
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f312f535",
+   "id": "416c457e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2b43fed0",
+   "id": "e37c812e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "0413225a",
+   "id": "3ac7cdd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e0cada4f",
+   "id": "b5a9077b",
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "51d0eaca",
+   "id": "f78cfc43",
    "metadata": {},
    "outputs": [
     {
@@ -813,8 +813,187 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "e016f03d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 20\n",
+      "drwxrwxr-x 2 trytolose trytolose 4096 сен 11 22:41 fold_0\n",
+      "drwxrwxr-x 2 trytolose trytolose 4096 сен 11 22:42 fold_1\n",
+      "drwxrwxr-x 2 trytolose trytolose 4096 сен 11 23:17 fold_2\n",
+      "drwxr-xr-x 2 trytolose trytolose 4096 сен 11 21:14 fold_3\n",
+      "drwxr-xr-x 2 trytolose trytolose 4096 сен 11 22:44 fold_4\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -l /home/trytolose/rinat/kaggle/grav_waves_detection/weights/CustomModel_v2/00_b0_512_5cqt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fc572434",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_512 = pd.read_csv(\"/home/trytolose/rinat/kaggle/grav_waves_detection/weights/CustomModel_v2/00_b0_512_5cqt/submission.csv\")\n",
+    "df_wav = pd.read_csv(\"submission_wavenet_023.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a967e611",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mask_unconf = (df_512['target']>0.2) & (df_512['target']<0.8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3a571d30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_512.loc[mask_unconf, 'target'] = 0.8*df_512.loc[mask_unconf, 'target'] + 0.2* df_wav.loc[mask_unconf, 'target']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6cdf0c87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_512['target'] = 0.8*df_512['target'] + 0.2* df_wav['target']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b637632b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_512.to_csv(\"cqt5_plus_wavenet_08_02.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c2d08af2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /home/trytolose/.kaggle/kaggle.json'\n",
+      "100%|██████████████████████████████████████| 5.63M/5.63M [00:03<00:00, 1.61MB/s]\n",
+      "Successfully submitted to G2Net Gravitational Wave Detection"
+     ]
+    }
+   ],
+   "source": [
+    "!kaggle competitions submit -c g2net-gravitational-wave-detection -f cqt5_plus_wavenet_08_02.csv -m \"cqt5_plus_wavenet_08_02\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c70f9b61",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0540c484",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         False\n",
+       "1         False\n",
+       "2          True\n",
+       "3         False\n",
+       "4         False\n",
+       "          ...  \n",
+       "225995     True\n",
+       "225996     True\n",
+       "225997    False\n",
+       "225998    False\n",
+       "225999    False\n",
+       "Name: target, Length: 226000, dtype: bool"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask_unconf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "39fc100c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.rand(13, 15, 256, 256)\n",
+    "t_max = torch.tensor([1.1]*15)\n",
+    "t_max[3] = 0.9\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "0a987d8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if (x.amax(dim=(0, 2,3)) > t_max).sum() < 1:\n",
+    "    print(\"here\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "1e095faa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1.1000, 1.1000, 1.1000, 0.9000, 1.1000, 1.1000, 1.1000, 1.1000, 1.1000,\n",
+       "        1.1000, 1.1000, 1.1000, 1.1000, 1.1000, 1.1000])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t_max"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3fe2b742",
+   "id": "725a896a",
    "metadata": {},
    "outputs": [],
    "source": []
